syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "_4_gRPC";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc GetContactById(ContactById) returns (ContactResponse);

  // Count
  rpc CountStream (google.protobuf.Empty) returns (stream CountData);

}


message ContactById {
  int32 Id = 1;
}

message ContactResponse {
  int32 Id = 1;
  string FirstName = 2;
  string LastName = 3;
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message CountData {
  google.protobuf.Timestamp timestamp = 1;
  int32 count = 2;
}
